<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="330dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:background="#111111"
    >

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/img_left_menu_meizhi"
        android:layout_width="@dimen/left_menu_meizhi"
        android:layout_height="@dimen/left_menu_meizhi"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginTop="@dimen/large_padding"
        android:visibility="invisible"
        app:actualImageScaleType="centerCrop"
        app:placeholderImage="@mipmap/avatar_translate"
        app:placeholderImageScaleType="centerCrop"
        app:roundAsCircle="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/large_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_left_meizhi"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_meizhi_selector"
            android:enabled="false"
            android:text="@string/text_meizhi"/>

        <TextView
            android:id="@+id/text_left_android"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_android_selector"
            android:text="@string/text_android"/>

        <TextView
            android:id="@+id/text_left_ios"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_ios_selector"
            android:text="@string/text_ios"/>

        <TextView
            android:id="@+id/text_left_video"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_video_selector"
            android:text="@string/text_video"/>

        <TextView
            android:id="@+id/text_left_frond"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_frond_selector"
            android:text="@string/text_frond"/>

        <TextView
            android:id="@+id/text_left_resource"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_resource_selector"
            android:text="@string/text_resource"/>

        <TextView
            android:id="@+id/text_left_app"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_app_selector"
            android:text="@string/text_app"/>

        <TextView
            android:id="@+id/text_left_recommend"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_recommend_selector"
            android:text="@string/text_recommend"/>

        <TextView
            android:id="@+id/text_left_search"
            style="@style/TextLeftMenu"
            android:drawableLeft="@drawable/sidebar_search_selector"
            android:text="@string/text_search"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_left_aboutme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_marginTop="@dimen/larger_padding"
        android:background="@drawable/sidebar_aboutme_selector"/>

</LinearLayout>